Resume Exercise - Added container around body

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
     <title>Resume: Ian Behrmann, Apprentice Developer</title>
   </head>
+  <div class="container">
   <body>
-    <div class="container"></div>
     <div class="row"></div>
     <div class="col-md-6"></div>
     <h1 id="heading">Ian Behrmann</h1>
@@ -42,4 +42,5 @@
         <li>Now learning HTML/CSS/JS Fuctionality</li>
       </ul>
   </body>
+  </div>
 </html>
